# IST

./: .gitignore  .gitmodules  10-can-usb.rules  99-imu-usb.rules  README.md  all.launch.py  auth_x11_ssh.txt  cek_can_driver.sh  frames_2024-11-27_22.28.17.gv  frames_2024-11-28_09.15.28.gv  frames_2025-04-15_09.37.57.gv  frames_2025-08-01_06.10.17.gv  init_all.sh  ist-run.service  make.sh  qwe.db  run.sh  save_cartographer_map.sh  tf_tree.sh
SOEM_local/soem/: ethercatcoe.c
src/ascamera/src/: CameraPublisher.cpp  CameraSrv.cpp  ascamera_node.cpp
src/communication/: CMakeLists.txt
src/communication/scripts/: telemetry.py  telemetry_icar.py  udp_logger.py  wit_ros2_imu.py
src/dio/: CMakeLists.txt  dio_pc.c  ecb_306.h
src/hardware/: CMakeLists.txt  package.xml
src/hardware/include/hardware/: ecb_306.h
src/hardware/src/: CANbus_HAL.cpp  beckhoff.cpp  beckoff_back.cpp  jhctech_291.c  serial_imu.cpp
src/livox_ros_driver2_local/src/: lddc.cpp  lddc.h  livox_ros_driver2.cpp
src/master/: CMakeLists.txt  package.xml
src/master/include/master/: master.hpp
src/master/src/: master.cpp  master_definition.cpp  master_process.cpp  motion.cpp
src/ros2_interface/: CMakeLists.txt
src/ros2_interface/msg/: Terminal.msg
src/ros2_interface/srv/: Params.srv
src/ros2_utils/: CMakeLists.txt  package.xml
src/ros2_utils/configs/: cartographer_config.lua  cyclonedds.xml  dynamic_conf.yaml  livox_MID360.json  robot.rviz  terminal.csv  terminal_copy.csv  waypoint.csv
src/ros2_utils/include/ros2_utils/: global_definitions.hpp  help_marker.hpp  keyboard_input.hpp  pid.hpp  rtabmap_params.h
src/ros2_utils/launch/: all.launch.py  all.launch_asli.py  asd.txt  bckp.launch.py  fira.launch.py  t1.launch.py  t2.launch.py  t3.launch.py  tes_rs_rtabmap.launch.py
src/ros2_utils/src/: help_marker.cpp
src/rslidar_sdk/: CMakeLists.txt  package.xml
src/rslidar_sdk/config/: config.yaml  lidar_kanan.yaml  lidar_kiri.yaml
src/rslidar_sdk/launch/: start.py
src/rslidar_sdk/node/: rslidar_sdk_node.cpp  rslidar_sdk_node_kanan.cpp  rslidar_sdk_node_kiri.cpp
src/urg_node2/: CMakeLists.txt  package.xml
src/urg_node2/include/urg_node2/: urg_node2.hpp
src/urg_node2/src/: urg_node2.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: forklift_detector.cpp  lane_detection.cpp  single_detection.cpp  single_lane_detection.cpp  vision_capture.cpp
src/web_ui/: CMakeLists.txt
src/web_ui/scripts/: upload_server.py
src/web_ui/src/: ROS_if.html  ROS_if_imv.html  contoh_circle.html  contoh_circle2.html  contoh_circle_fix.html  diagnosa_error.html  diagnosa_error.js  index.css  index.html  index.js  kalibrasi_kamera.html  kalibrasi_kamera.js  kalibrasi_kamera_kanan.html  kalibrasi_kamera_kiri.html  kamera_kanan.js  kamera_kiri.js  list_name.txt  maintenance.html  maintenance.js  map.html  map.js  open-web.service  open_web.py  remote.html  remote.js  slam.html  slam.js  upload.html  upload.js
src/world_model/: CMakeLists.txt  package.xml
src/world_model/src/: all_obstacle_filter.cpp  camera_obstacle_detector.cpp  icp.cpp  lidar_obstacle_filter.cpp  map_origin_publisher.cpp  obstacle_filter.cpp  pose_estimator.cpp  pose_estimator_icp.cpp
src/wr_ls_udp/: CMakeLists.txt  README.md  package.xml
src/wr_ls_udp/config/: wr_lidar.yaml
src/wr_ls_udp/include/wr_ls_udp2/: parser_base.h  wr_ls1207de_parser.h  wr_ls_common.h  wr_ls_common_udp.h  wr_ls_constants.h  wr_ls_sensor_frame.h
src/wr_ls_udp/launch/: wr_ls1207de_udp_with_1_lidar_launch.py
src/wr_ls_udp/src/: parser_base.cpp  wr_ls1207de.cpp  wr_ls1207de_parser.cpp  wr_ls_common.cpp  wr_ls_common_udp.cpp  wr_ls_sensor_frame.cpp
tools/: GASIST.csv  a.out  asd_wp_bagus.csv  asdasd_wp_bagus.csv  asdasdasda_backup_sebelum_hapus.csv  asdasdasda_backup_sebelum_hapus_bawah.csv  auto_mati  back_wp_2_jalur.csv  bismillah_sukses.csv  ecb_306.h  geser_15_cm_wp_bagus.csv  geser_25_cm_wp_bagus.csv  geser_7_cm_wp_bagus.csv  geser_lagi_20_cm.csv  hidupkan_hw  hidupkan_hw.c  jalan.pcd  jalan2.pcd  jalan_baru.pcd  jalan_voxelized.pcd  jalan_voxelized2.pcd  jhctech_291.c  jhctech_291.h  make.sh  pcd2wp.py  realtime_wp_visualize.py  rtabmap2pcd.py  rtabmap3.pcd  setelah_jembatan_bagus.csv  setelah_jembatan_wp_bagus.csv  smooth_jalan.py  smoothed_waypoints.csv  smoothed_waypoints2.csv  smoothed_waypoints3.csv  smoothed_waypointsrev4.csv  smoothed_waypointsrev42.csv  terminal.csv  terminal_bagus.csv  terminal_bagus_backup.csv  terminal_editor.py  (+44 more)
